PA_Education/TestMenifest/force-app/main/default/objects/ContractedOutsourcing__c/ContractedOutsourcing__c.object-meta.xml
<CustomObject>
    <label>계약된 외주인력</label>
    <nameField>
        <displayFormat>COS{YYYYMMDD}-{000}</displayFormat>
        <label>계약된 외주인력 No</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>