PA_Education/TestMenifest/force-app/main/default/objects/ContractedOutsourcing__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>하도급업체명</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>junction</relationshipName>
    <type>Lookup</type>
</CustomField>