PA_Education/TestMenifest/force-app/main/default/objects/ContractedOutsourcing__c/fields/ContractDate__c.field-meta.xml
<CustomField>
    <fullName>ContractDate__c</fullName>
    <label>계약일자</label>
    <type>Date</type>
</CustomField>