PA_Education/TestMenifest/force-app/main/default/objects/ContractedOutsourcing__c/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employee</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Employee__c.Type__c</field>
            <operation>equals</operation>
            <value>외부직원</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Employee__c</referenceTo>
    <relationshipName>junction</relationshipName>
    <type>Lookup</type>
</CustomField>