PA_Education/TestMenifest/force-app/main/default/objects/ContractedOutsourcing__c/fields/fm_ContractDate__c.field-meta.xml
<CustomField>
    <fullName>fm_ContractDate__c</fullName>
    <formula>SubContract__r.Contract_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>fm_계약일자</label>
    <type>Date</type>
</CustomField>