PA_Education/TestMenifest/force-app/main/default/objects/ContractedOutsourcing__c/fields/fm_EndDate__c.field-meta.xml
<CustomField>
    <fullName>fm_EndDate__c</fullName>
    <formula>SubContract__r.EndDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>fm_종료일자</label>
    <type>Date</type>
</CustomField>