PA_Education/TestMenifest/force-app/main/default/objects/ContractedOutsourcing__c/fields/fm_StartDate__c.field-meta.xml
<CustomField>
    <fullName>fm_StartDate__c</fullName>
    <formula>SubContract__r.StartDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>fm_시작일자</label>
    <type>Date</type>
</CustomField>