PA_Education/TestMenifest/force-app/main/default/objects/ContractedOutsourcing__c/fields/StartDate__c.field-meta.xml
<CustomField>
    <fullName>StartDate__c</fullName>
    <label>시작일자</label>
    <type>Date</type>
</CustomField>