PA_Education/TestMenifest/force-app/main/default/objects/ContractedOutsourcing__c/fields/SubContract__c.field-meta.xml
<CustomField>
    <fullName>SubContract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>하도급 계약</label>
    <referenceTo>subcontracting_contract__c</referenceTo>
    <relationshipName>junction</relationshipName>
    <type>Lookup</type>
</CustomField>