PA_Education/TestMenifest/force-app/main/default/objects/ContractedOutsourcing__c/listViews/ALL.listView-meta.xml
<ListView>
    <fullName>ALL</fullName>
    <columns>NAME</columns>
    <columns>fm_ContractDate__c</columns>
    <columns>fm_StartDate__c</columns>
    <columns>fm_EndDate__c</columns>
    <columns>SubContract__c</columns>
    <columns>Account__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>ALL</label>
</ListView>